<resources>
    <string name="app_name">Game Frame</string>
    <string name="setup">Setup</string>
    <string name="ip_separator">.</string>
    <string name="enter_ip_address">Enter IP address</string>
    <string name="setup_ip_address">Setup IP address</string>
    <string name="success">Success</string>
    <string name="operation_failed">Operation failed</string>
    <string name="power">Power</string>
    <string name="game_frame_power">Game Frame Power</string>
    <string name="menu">Menu</string>
    <string name="next">Next</string>
    <string name="discover_game_frame_ip">Discover Game Frame IP</string>
    <string name="game_frame_ip_found">Game Frame IP found</string>
    <string name="playback_mode">Playback Mode</string>
    <string name="cycle_interval">Cycle Interval</string>
    <string name="display_mode">Display Mode</string>
    <string name="clock_face">Clock Face</string>
    <string name="trying_to_find_game_frame">Trying to find the Game Frame on your local network</string>
    <string name="game_frame_ip_not_found">Game Frame IP not found.\nSet it up now?</string>
    <string name="manage">Manage</string>
    <string name="draw">Draw</string>
    <string name="error_communicating">There was an error communicating with the GameFrame</string>
    <string name="upload">Upload</string>
    <string name="enter_name_for_drawing">Enter name for the drawing</string>
    <string name="name_of_drawing">Name of drawing</string>
    <string name="replace">Replace</string>
    <string name="already_exists">Drawing already exists.</string>
    <string name="change_color">Change color</string>
    <string name="layers">Layers</string>
    <string name="transparency">Transparency</string>
    <string name="name">Name</string>
    <string name="blend_mode">Blend Mode</string>
    <string name="composition_operator">Composition Operator</string>
    <string name="layer_settings">Layer settings</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="palettes">Palettes</string>
    <string name="add_new_palette">Add New Palette</string>
    <string name="palette_settings">Palette settings</string>
    <string name="title">Title</string>
    <string name="tools">Tools</string>
    <string name="change_tool">Change tool:</string>
    <string name="display_layer_borders">Display layer borders</string>
    <string name="game_frame_ip">Game Frame IP: %1$s</string>
    <string name="save">Save</string>
    <string name="send_to_game_frame">Send to GameFrame</string>
    <string name="open_drawing">Open previously saved drawing</string>
    <string name="untitled">Untitled</string>
    <string name="load_project">Load Project</string>
    <string name="no_saved_projects">There are no saved projects</string>
    <string name="delete_projects">Delete saved projects</string>
    <string name="delete">Delete</string>
    <string name="new_project">Create new project</string>
    <string name="dismiss">Dismiss</string>
    <string name="dismiss_changes_question">Dismiss changes?</string>
    <string name="unsaved_changes">There are unsaved changes. Are you sure you want to dismiss them?</string>
    <string name="do_not_dismiss">Do not dismiss</string>
    <string name="tool_not_for_background">This tool cannot be applied to the background layer</string>
    <string name="background">Background</string>
    <string name="layer_borders_displaying">Displaying layer borders</string>
    <string name="layer_borders_not_displaying">Hiding layer borders</string>
    <string name="palette_name">Palette: %1$s</string>
    <string name="unsupported_version">Unsupported version</string>
    <string name="unsupported_version_description">This app does not support the version of the saved file. There may be a newer version available that supports it. Try searching the Play Store for an update?</string>
    <string name="play_store">Play Store</string>
    <string name="cancel">Cancel</string>
    <string name="export_image">Export image</string>
    <string name="changelog">Changelog</string>
    <string name="wifi_not_enabled">Wifi is not enabled</string>
    <string name="enable">Enable</string>
    <string name="feedback">Feedback</string>
    <string name="unknown_error">Something unexpected went wrong.</string>
    <string name="account">Account</string>
    <string name="select_login_provider">Select one of the providers to log in</string>
    <string name="google">Google</string>
    <string name="hello_name">Hello \n%s</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete Account</string>
    <string name="log_in">Log in</string>
    <string name="log_in_upsell">Looks you are not logged in.\nLog in to synchronize your drawings so you never lose them</string>
    <string name="sign_in_error">Something went wrong. Try again.</string>
    <string name="delete_account_verification">Are you sure you want to delete your account? This is irreversible. All your online saved drawings will be lost</string>
    <string name="upload_saved_projects">Upload saved projects</string>
    <string name="upload_saved_projects_description">Would you like to upload your saved projects to your account? (CAREFUL! existing projects on your account will be overridden by local ones if they have the same name)</string>
    <string name="skip">Skip</string>
    <string name="projects_upload_finished">Projects uploaded successfully</string>
    <string name="projects_failed_to_upload">Some (or all) projects failed to upload</string>
    <string name="projects_upload_started">Started uploading projects</string>
    <string name="re_upload_projects">Re-upload local projects</string>
    <string name="no_projects_to_upload">There are no saved projects to upload</string>
</resources>
