<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/display_layer_borders"
        android:orderInCategory="0"
        android:icon="@drawable/ic_border_outer_white_48px"
        android:id="@+id/menu_borders"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:title="@string/undo"
        android:orderInCategory="0"
        android:icon="@drawable/ic_undo_white_48px"
        android:id="@+id/menu_undo"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:title="@string/redo"
        android:orderInCategory="1"
        android:icon="@drawable/ic_redo_white_48px"
        android:id="@+id/menu_redo"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

</menu>