<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_draw_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        android:id="@+id/view_draw_sliding_up_panel"
        android:gravity="bottom"
        app:umanoPanelHeight="0dp"
        app:umanoShadowHeight="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/view_draw_open_palette"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_palette_white_48px"
                app:backgroundTint="@color/colorPrimaryDark"
                app:fabSize="mini"
                tools:ignore="ContentDescription,RtlHardcoded"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/view_draw_open_layers"
                app:backgroundTint="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/view_draw_open_palette"
                android:src="@drawable/ic_layers_48px"
                app:fabSize="mini"
                tools:ignore="ContentDescription,RtlHardcoded"/>

            <com.savvasdalkitsis.gameframe.feature.workspace.element.tools.view.ToolFabView
                android:id="@+id/view_draw_tools_current"
                style="?attr/actionButtonStyle"
                app:backgroundTint="@color/colorPrimaryDark"
                tools:src="@drawable/ic_create_white_48px"
                android:layout_alignTop="@id/view_draw_open_palette"
                android:layout_marginRight="16dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/view_draw_open_layers"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/view_draw_tools_change"
                android:text="@string/change_tool"
                android:layout_toLeftOf="@id/view_draw_tools_current"
                android:layout_toRightOf="@id/view_draw_open_palette"
                android:layout_alignBottom="@id/view_draw_tools_current"
                android:layout_alignTop="@id/view_draw_tools_current"
                android:gravity="center_vertical|right"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/view_draw_project_name"
                android:text="@string/untitled"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="4dp"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_draw_open_palette"
                tools:ignore="SmallSp" />

            <com.savvasdalkitsis.gameframe.feature.workspace.element.grid.view.LedGridView
                android:id="@+id/view_draw_led_grid_view"
                android:layout_below="@id/view_draw_project_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

            <include
                android:id="@+id/view_draw_palette"
                layout="@layout/view_palette"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_draw_led_grid_view"
                android:layout_marginRight="100dp"
                android:layout_marginLeft="16dp"
                tools:ignore="RtlHardcoded" />
        </RelativeLayout>

        <com.savvasdalkitsis.gameframe.feature.workspace.element.tools.view.ToolsView
            android:id="@+id/view_draw_tools"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.sothree.slidinguppanel.SlidingUpPanelLayout>

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@android:color/white"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            android:text="@string/palettes" />

        <com.savvasdalkitsis.gameframe.feature.workspace.element.palette.view.PalettesView
            android:id="@+id/view_draw_palettes"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="@android:color/white"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            android:text="@string/layers" />

        <com.savvasdalkitsis.gameframe.feature.workspace.element.layer.view.LayersView
            android:id="@+id/view_draw_layers"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>